[package]
name = "api"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
name = "api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { workspace = true }
service = { workspace = true }
migration = { workspace = true }
util = { workspace = true }
macros = { workspace = true }
envy = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
wechat-pay-rust-sdk = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
actix-governor = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-appender = { workspace = true }
listenfd = { workspace = true }
cached = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
md5 = { workspace = true }